[package]
name = "taman"
version = "0.1.3"
edition = "2021"
authors = ["harmoneer <brush.busy@gmail.com>"]
description = "A TUI Pomodoro productivity app where your focus sessions grow plants."
license = "MIT"
repository = "https://github.com/harmoneer/taman"
keywords = ["pomodoro", "productivity", "terminal", "tui", "ratatui"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
tui-big-text = "0.7"
tui-piechart = "0.2"
